syntax = "proto3";

package user;

service UserService {
  rpc Register(UserRegisterMessage) returns (User) {}
  rpc Authenticate(UserAuthenticateMessage) returns (User) {}
  rpc FindById(FindUserByIdMessage) returns (User) {}
  rpc FindByEmail(FindUserByEmailMessage) returns (User) {}
  rpc ExistsById(FindUserByIdMessage) returns (User) {}
}

message UserRegisterMessage {
  string email = 1;
  string username = 2;
  string password = 3;
}

message UserAuthenticateMessage {
  string username = 1;
  string password = 2;
}

message User {
  string id = 1;
  string username = 3;
}

message FindUserByIdMessage { string id = 1; }
message FindUserByEmailMessage { string email = 1; }
